--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,1 @@
-/* You can add global styles to this file, and also import other style files */
+@import "D:/software/xserver-/htdocs/appointment-app/node_modules/bootstrap/dist/css/bootstrap.min.css"
